@@ -25,7 +25,6 @@ libdc1394_la_SOURCES =  \
 	conversions.h   \
 	bayer.c         \
 	log.c		\
-	log.h		\
 	checksum.c
 
 libdc1394_la_LIBADD = \
